# LSPlant

./: .gitmodules  build.gradle.kts
.github/workflows/: build.yml
gradle/: libs.versions.toml
lsplant/: build.gradle.kts
lsplant/src/main/jni/: CMakeLists.txt  common.hpp  logging.hpp  lsplant.cc
lsplant/src/main/jni/art/mirror/: class.cxx  class.hpp
lsplant/src/main/jni/art/runtime/: art_method.cxx  art_method.hpp  class_linker.cxx  class_linker.hpp  dex_file.cxx  dex_file.hpp  instrumentation.cxx  instrumentation.hpp  runtime.cxx  runtime.hpp
lsplant/src/main/jni/art/runtime/jit/: jit_code_cache.cxx  jit_code_cache.hpp
lsplant/src/main/jni/art/runtime/jni/: jni_id_manager.cxx  jni_id_manager.h
test/src/androidTest/java/org/lsposed/lsplant/: UnitTest.java
test/src/main/jni/: CMakeLists.txt  elf_util.cpp  logging.h  test.cpp
